@@ -20,6 +20,8 @@ Compatibility Breaks
 
 * ``Repository.get_inventory_sha1()`` has been removed. (Jelmer Vernooij)
 
+* ``Repository.get_revision_xml()`` has been removed. (Jelmer Vernooij)
+
 * All test servers have been moved out of the bzrlib.transport hierarchy to
   bzrlib.tests.test_server *except* for MemoryServer, ChrootServer and
   PathFilteringServer. ``bzrlib`` users may encounter test failures that can
